# displayhatmini-python

./: CHANGELOG.md  Makefile  README.md  install.sh  pyproject.toml
.github/workflows/: test.yml
displayhatmini/: __init__.py  __main__.py
examples/: ipaddr.py  led.py  pong.py  pwm-backlight.py  pygame-basic.py  pygame-button-interrupt.py  pygame-demo.py  requirements.txt
tests/: conftest.py
